[gd_scene load_steps=13 format=3 uid="uid://c1u4h03v4523r"]

[ext_resource type="Script" path="res://Scripts/Game/GameLoop.gd" id="1_ec0l3"]
[ext_resource type="Script" path="res://Scripts/Game/Camera.gd" id="2_3w055"]
[ext_resource type="PackedScene" uid="uid://bxajfs5sef2rp" path="res://Objects/Controlled/player.tscn" id="3_htpfn"]
[ext_resource type="Script" path="res://Scripts/Game/Walls.gd" id="4_rnqih"]
[ext_resource type="PackedScene" uid="uid://dgprf0i2fmkqu" path="res://Objects/Static/wall_Horizontal.tscn" id="5_mcyko"]
[ext_resource type="PackedScene" uid="uid://dv35qxgrprgsk" path="res://Objects/Static/wall_Vertical.tscn" id="6_af863"]
[ext_resource type="PackedScene" uid="uid://biffct7nsk356" path="res://hud.tscn" id="7_nb6g4"]
[ext_resource type="PackedScene" uid="uid://b1q427q37s1jc" path="res://Upgrades/Guns/sniper.tscn" id="8_6ykiu"]

[sub_resource type="Curve" id="Curve_gib4q"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_yek4b"]
orientation = 2

[sub_resource type="Environment" id="Environment_vyppd"]
glow_enabled = true
glow_strength = 2.0
glow_bloom = 1.0

[sub_resource type="Curve2D" id="Curve2D_af16l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -34, -40, 0, 0, 0, 0, 88, -44, 0, 0, 0, 0, 72, 66, 0, 0, 0, 0, -16, 52, 0, 0, 0, 0, -60, -278, 0, 0, 0, 0, 520, -274, 0, 0, 0, 0, 492, 240, 0, 0, 0, 0, -481, 217, 0, 0, 0, 0, -461, -289, 0, 0, 0, 0, -280, -17, 0, 0, 0, 0, -229, 141, 0, 0, 0, 0, 178, 147, 0, 0, 0, 0, 393, 130, 0, 0, 0, 0, 342, -164, 0, 0, 0, 0, 184, -218, 0, 0, 0, 0, -48, -210, 0, 0, 0, 0, -136, -210, 0, 0, 0, 0, -226, -193, 0, 0, 0, 0, 85, -14)
}
point_count = 19

[node name="Main" type="Node2D"]
script = ExtResource("1_ec0l3")

[node name="GameLoopTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_3w055")
shakeCurve = SubResource("Curve_gib4q")

[node name="Background" type="MeshInstance2D" parent="Camera"]
modulate = Color(0.0562916, 0.0562916, 0.0562914, 1)
position = Vector2(4.50002, 7)
scale = Vector2(589.5, 338)
mesh = SubResource("PlaneMesh_yek4b")
metadata/_edit_lock_ = true

[node name="Shaketime" type="Timer" parent="Camera"]
one_shot = true

[node name="Player" parent="." instance=ExtResource("3_htpfn")]
unique_name_in_owner = true

[node name="Walls" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_rnqih")

[node name="Wall_D" parent="Walls" instance=ExtResource("5_mcyko")]
position = Vector2(0, 320)

[node name="Wall_U" parent="Walls" instance=ExtResource("5_mcyko")]
position = Vector2(0, -320)
rotation = 3.14159

[node name="Wall_L" parent="Walls" instance=ExtResource("6_af863")]
position = Vector2(-570, 0)
rotation = 3.14159

[node name="Wall_R" parent="Walls" instance=ExtResource("6_af863")]
position = Vector2(570, 0)

[node name="Objects" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hud" parent="UI" instance=ExtResource("7_nb6g4")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vyppd")

[node name="EnemyGoals" type="Path2D" parent="."]
curve = SubResource("Curve2D_af16l")

[node name="enemyPath" type="PathFollow2D" parent="EnemyGoals"]
position = Vector2(-34, -40)
rotation = -0.0327751

[node name="Enemies" type="Node2D" parent="."]

[node name="Sniper" parent="." instance=ExtResource("8_6ykiu")]
position = Vector2(255, -116)

[connection signal="deathSignal" from="Player" to="." method="_on_player_death"]
